[gd_scene load_steps=5 format=3 uid="uid://cgmpc66dobfed"]

[ext_resource type="PackedScene" uid="uid://3h28lxb02vva" path="res://Cenas/caleb.tscn" id="1_1f2ru"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_l7ph0"]
[ext_resource type="PackedScene" uid="uid://diqel02yd22ke" path="res://Cenas/seguidor.tscn" id="3_rfqnh"]
[ext_resource type="PackedScene" uid="uid://b6gw6ltmrw7rf" path="res://Cenas/menu.tscn" id="5_uhm7t"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_l7ph0")

[node name="Personagem" parent="." instance=ExtResource("1_1f2ru")]
position = Vector2(-8, 8)

[node name="Seguidor" parent="." instance=ExtResource("3_rfqnh")]
position = Vector2(-24, -8)
name_ = "morgana"

[node name="Seguidor2" parent="." instance=ExtResource("3_rfqnh")]
position = Vector2(-24, 8)
party_pos = 3
name_ = "teste"

[node name="Seguidor3" parent="." instance=ExtResource("3_rfqnh")]
position = Vector2(-8, -8)
party_pos = 4
name_ = "teste2"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, 0)
zoom = Vector2(4.05, 4.05)

[node name="Menu" parent="Camera2D" instance=ExtResource("5_uhm7t")]
visible = false
z_index = 100
scale = Vector2(0.25, 0.25)

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3

[connection signal="change_character" from="." to="Personagem" method="change_character"]
[connection signal="change_character" from="." to="Seguidor" method="change_character"]
[connection signal="change_character" from="." to="Seguidor2" method="change_character"]
[connection signal="change_character" from="." to="Seguidor3" method="change_character"]
[connection signal="seguir" from="Personagem" to="Seguidor" method="seguir"]
[connection signal="seguir" from="Personagem" to="Seguidor2" method="seguir"]
[connection signal="seguir" from="Personagem" to="Seguidor3" method="seguir"]
